@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2014,v 1.398 2014/01/23 13:30:50 obache Exp $
+$NetBSD: CHANGES-2014,v 1.399 2014/01/23 14:15:12 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2014:
 
@@ -482,3 +482,4 @@ Changes to the packages collection and infrastructure in 2014:
         Updated textproc/latex2html to 2008nb5 [is 2014-01-23]
 	Updated mail/sma to 1.4nb1 [tron 2014-01-23]
 	Updated www/lighttpd to 1.4.34 [adam 2014-01-23]
+	Removed editors/vim-gtk successor editors/vim-gtk2 [wiz 2014-01-23]
